--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
+	compile group: 'org.openapitools', name: 'openapi-generator', version: '4.3.1'
+	compile group: 'com.github.joschi.jackson', name: 'jackson-datatype-threetenbp', version: '2.11.3'
+	compile group: 'javax.validation', name: 'com.springsource.javax.validation', version: '1.0.0.GA'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
