--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/DocumentBD
+spring.datasource.username=toto
+spring.datasource.password=toto
