Connect to Docker Postgres in local

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/DocumentBD
-spring.datasource.username=toto
-spring.datasource.password=toto
+spring.datasource.url=jdbc:postgresql://localhost:5432/apidb
+spring.datasource.username=tpmra
+spring.datasource.password=tpmra
