--- a/build.gradle
+++ b/build.gradle
@@ -22,14 +22,18 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
 	compile group: 'org.openapitools', name: 'openapi-generator', version: '4.3.1'
 	compile group: 'com.github.joschi.jackson', name: 'jackson-datatype-threetenbp', version: '2.11.3'
-	compile group: 'javax.validation', name: 'com.springsource.javax.validation', version: '1.0.0.GA'
+	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+}
+
+configurations.all {
+    exclude module: "spring-boot-starter-logging"
+    exclude module: "logback-classic"
 }
 
 test {
