--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/apidb
 spring.datasource.username=tpmra
 spring.datasource.password=tpmra
+spring.jpa.hibernate.ddl-auto=update
