--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.platform=postgres
+tpmspring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/apidb
 spring.datasource.username=tpmra
 spring.datasource.password=tpmra
