--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,10 @@ services:
       POSTGRES_DB: apidb
     ports:
       - "5432:5432"
+
+  tpmra: 
+    build: .
+    image: jaguesse/tpmra
+    container_name: tpmra
+    ports: 
+      - "8080:8080"
