--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 tpmspring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/apidb
+spring.datasource.url=jdbc:postgresql://postgres:5432/apidb
 spring.datasource.username=tpmra
 spring.datasource.password=tpmra
 spring.jpa.hibernate.ddl-auto=update
